Fix: 修正项目列表页

--- a/citi/apps/crowdfunding/templates/crowdfunding/project_list.jinja
+++ b/citi/apps/crowdfunding/templates/crowdfunding/project_list.jinja
@@ -89,7 +89,7 @@
 												<dt class="title-small right">已筹资</dt>
 											</div>
 											<div class="text-right left project-schedule-wrap">
-												<dd class="data">29天</dd>
+												<dd class="data">{{ project.get_remaining_days }}天</dd>
 												<dt class="title-small right">剩余时间</dt>
 											</div>
 										</dl>
