--- a/citi/apps/account/templates/registration_form.html
+++ b/citi/apps/account/templates/registration_form.html
@@ -151,9 +151,9 @@
                                             </div>
                                             <div class="basic-info-list mb-20 clear">
                                                 <label class="mr-12 green left" for="province">籍&nbsp;贯:</label>
-                                                <select name="province" id="province" class="select left">
+                                                <select name="province" id="province" class="select left province">
                                                 </select>
-                                                <select name="native" id="city" class="select left"></select>
+                                                <select name="native" id="city" class="select left city"></select>
                                             </div>
                                             <div class="basic-info-list mb-20 clear">
                                                 <label class="mr-12 green left" for="profession">职&nbsp;业:</label><input
