--- a/citi/templates/base.jinja
+++ b/citi/templates/base.jinja
@@ -153,8 +153,8 @@
                     <div class="footer-section left">
                         <h2 class="normal">关于</h2>
                         <ul>
-                            <li><a href="#">了解追梦</a></li>
-                            <li><a href="#">追梦历程</a></li>
+                            <li><a href="#">了解好味道众筹</a></li>
+                            <li><a href="#">好味道众筹历程</a></li>
                             <li><a href="#">友情链接</a></li>
                             <li><a href="#">联系我们</a></li>
                         </ul>
@@ -250,6 +250,7 @@
             </div>
         </div>
     </div>
+    <span class="logout"><a href="#" class="white">登出</a></span>
     <div class="modal-backdrop"></div>
 </body>
 </html>
