--- a/citi/apps/account/templates/registration_form.jinja
+++ b/citi/apps/account/templates/registration_form.jinja
@@ -132,7 +132,7 @@
                                         </div>
                                         <div class="basic-info-list mb-20 clear imageWrap">
                                             <label class="mr-12 green left" for="image">证件照:</label>
-                                            <img src="img/imageholder.png" width="270" height="270" alt="">
+                                            <img src="{{ 'img/imageholder.png'|static }}" width="270" height="270" alt="">
                                             <div class="imagePreview left"></div>
                                             <input type="file" id="image" name="image">
                                             <button class="btn bg-green-light white hide" type="button" id="imageUpload">上传</button>
