--- a/citi/static/css/base.css
+++ b/citi/static/css/base.css
@@ -259,3 +259,37 @@ svg {
     margin-right: 5px;
     background-size: 14px 14px;
 }
+
+.login .login-item > input {
+    width: 270px;
+    padding: 0 0 0 17px;
+    height: 44px;
+}
+.login-input-icon {
+    width: 44px;
+    height: 44px;
+    text-indent: 999em;
+    background-color: #f0f0f0;
+}
+.login .login-password {
+    margin-top: 15px;
+}
+.login-opt {
+    padding: 20px 0;
+}
+.login-opt > p {
+    line-height: 1.5;
+}
+.login-opt > input {
+    vertical-align: -2px;
+}
+.login-opt em > a {
+    color: #7abe9f;
+}
+.login .btn {
+    width: 100%;
+    padding: 0;
+    font-size: 20px;
+    line-height: 44px;
+    background-color: #7abe9f;
+}
