--- a/citi/static/css/forumDetail.css
+++ b/citi/static/css/forumDetail.css
@@ -13,8 +13,7 @@
 .comment .list {
     padding: 30px 0 50px;
 }
-.list .round-icon-wrap .round,
-.forum-info .round-icon-wrap .round {
+.list .round-icon-wrap .round, .forum-info .round-icon-wrap .round {
     line-height: 64px;
     width: 64px;
     height: 64px;
@@ -31,6 +30,7 @@
 }
 .forum-main-reply .text {
     width: 100%;
+    background-color: #f9f9f9;
     box-sizing: border-box;
     height: 100px;
 }
@@ -77,14 +77,14 @@
     background-color: white;
 }
 .comment-backdrop {
-    background-color: #f9f9f9;
     background-image: url(../img/progress.gif);
     background-repeat: no-repeat;
     background-position: 50% 50%;
+    right: 0;
     opacity: 0.5;
     position: absolute;
+    background-color: #f9f9f9;
     top: 0;
-    right: 0;
     bottom: 0;
     left: 0;
 }
