--- a/citi/templates/base.jinja
+++ b/citi/templates/base.jinja
@@ -93,7 +93,11 @@
 						<input class="input-search left block" type="text" placeholder="请输入您要搜索的内容"/>
 					</div>
 				</form>
+                {% if not request.user.is_authenticated() %}
 				<div class="user left" data-toggle="modal" data-target="#loginModal"></div>
+                {% else %}
+                <span class="logout"><a href="{{ url('logout') }}" class="white">登出</a></span>
+                {% endif %}
 			</div>
 			<ul class="normal nav-link clear center">
 				<li class="left"><a class="block white" href="{{ url('home') }}">首页</a></li>
@@ -250,7 +254,6 @@
             </div>
         </div>
     </div>
-    <span class="logout"><a href="#" class="white">登出</a></span>
     <div class="modal-backdrop"></div>
 </body>
 </html>
