--- a/citi/apps/crowdfunding/templates/crowdfunding/project_detail.jinja
+++ b/citi/apps/crowdfunding/templates/crowdfunding/project_detail.jinja
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="{{ 'css/animate.css'|static }}">
     <link rel="stylesheet" href="{{ 'css/slider.css'|static }}">
     <link rel="stylesheet" href="{{ 'css/info.css'|static }}">
+    <link rel="stylesheet" href="{{ 'css/forumDetail.css'|static }}">
     <script src="{{ 'js/lib/require.js'|static }}"></script>
     <script>
         require(['/static/js/common.js'], function (common) {
-            require(['app/info']);
+            require(['app/info', 'app/forumDetail']);
         })
     </script>
 {% endblock %}
@@ -184,82 +185,166 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="info-function-comment-list">
-                            <div class="info-function-comment-list-wrap">
-                                <ul>
-                                    <li class="comment-list">
-                                        <div class="comment-list-wrap clear">
-                                            <div class="left round-icon">
-                                                <div class="round-icon-wrap">
-                                                    {% if user_image %}
-                                                        <div class="round">
-                                                            <img src="{{ user_image }}">
-                                                        </div>
-                                                    {% else %}
-                                                        <div class="round"></div>
-                                                    {% endif %}
-                                                </div>
-                                            </div>
-                                            <div class="comment-form comment-text clear">
-                                                <textarea class="text" name="" id="js-comment" rows="4"
-                                                          placeholder="添加评论或者把该项目@给好友"></textarea>
-                                                <button class="right btn bg-green-light white" form="sign"
-                                                        id="submit">提交
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="comment-list">
-                                        <div class="comment-list-wrap clear relative">
+                        <div class="forum-main-comment bg-white mb-20">
+                            <div class="commentarea relative">
+                                <ul class="comment even">
+                                    <li class="list clear">
+                                        <div class="left clear">
                                             <div class="left round-icon">
                                                 <div class="round-icon-wrap">
                                                     <div class="round"></div>
                                                 </div>
                                             </div>
-                                            <div class="comment-text clear">
-                                                <dl>
-                                                    <dt>yoooooo</dt>
-                                                    <dd>好隐晦，棒。</dd>
-                                                </dl>
+                                        </div>
+                                        <div class="right list-info title-small">
+                                            <p><a class="title-small comment-reply" href="#">回复</a></p>
+                                        </div>
+                                        <div class="list-main">
+                                            <div class="list-person"><p class="normal green mr-12 inline-block">
+                                                fff团团长</p><span class="title-small">23天前</span></div>
+                                            <div class="list-comment inline-block">好隐晦，真棒。</div>
+                                        </div>
+                                        <ul class="comment odd">
+                                            <li class="list clear">
+                                                <div class="left">
+                                                    <div class="left round-icon">
+                                                        <div class="round-icon-wrap">
+                                                            <div class="round"></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="right list-info title-small">
+
+                                                    <p><a class="title-small comment-reply" href="#">回复</a></p>
+                                                </div>
+                                                <div class="list-main">
+                                                    <div class="list-person"><p
+                                                            class="normal green mr-12 inline-block">fff团团长</p><span
+                                                            class="title-small">23天前</span></div>
+                                                    <div class="list-comment inline-block">好隐晦，真棒。</div>
+                                                </div>
+                                                <ul class="comment even">
+                                                    <li class="list clear">
+                                                        <div class="left">
+                                                            <div class="left round-icon">
+                                                                <div class="round-icon-wrap">
+                                                                    <div class="round"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="right list-info title-small">
+
+                                                            <p><a class="title-small comment-reply" href="#">回复</a>
+                                                            </p>
+                                                        </div>
+                                                        <div class="list-main">
+                                                            <div class="list-person"><p
+                                                                    class="normal green mr-12 inline-block">
+                                                                fff团团长</p><span class="title-small">23天前</span>
+                                                            </div>
+                                                            <div class="list-comment inline-block">好隐晦，真棒。</div>
+                                                        </div>
+                                                        <ul class="comment odd">
+                                                            <li class="list clear">
+                                                                <div class="left">
+                                                                    <div class="left round-icon">
+                                                                        <div class="round-icon-wrap">
+                                                                            <div class="round"></div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="right list-info title-small">
+
+                                                                    <p><a class="title-small comment-reply"
+                                                                          href="#">回复</a></p>
+                                                                </div>
+                                                                <div class="list-main">
+                                                                    <div class="list-person"><p
+                                                                            class="normal green mr-12 inline-block">
+                                                                        fff团团长</p><span
+                                                                            class="title-small">23天前</span></div>
+                                                                    <div class="list-comment inline-block">好隐晦，真棒。
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                    <li class="list clear">
+                                                        <div class="left">
+                                                            <div class="left round-icon">
+                                                                <div class="round-icon-wrap">
+                                                                    <div class="round"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="right list-info title-small">
+
+                                                            <p><a class="title-small comment-reply" href="#">回复</a>
+                                                            </p>
+                                                        </div>
+                                                        <div class="list-main">
+                                                            <div class="list-person"><p
+                                                                    class="normal green mr-12 inline-block">
+                                                                fff团团长</p><span class="title-small">23天前</span>
+                                                            </div>
+                                                            <div class="list-comment inline-block">好隐晦，真棒。</div>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="list clear">
+                                        <div class="left">
+                                            <div class="left round-icon">
+                                                <div class="round-icon-wrap">
+                                                    <div class="round"></div>
+                                                </div>
                                             </div>
-                                            <p class="title-small comment-time absolute">7-7 15:08</p>
+                                        </div>
+                                        <div class="right list-info title-small">
+                                            <p><a class="title-small comment-reply" href="#">回复</a></p>
+                                        </div>
+                                        <div class="list-main">
+                                            <p class="normal">这是众筹啊众筹的问答讨论话题</p>
                                         </div>
                                     </li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="page">
-                            <div class="page-wrap">
-                                <ul class="clear medium title-large">
-                                    <li class="last-page left round-icon">
-                                        <div class="round-icon-wrap"><a class="title-large round" href="#">&lt;</a>
-                                        </div>
-                                    </li>
-                                    <li class="left round-icon">
-                                        <div class="round-icon-wrap"><a class="title-large round" href="#">1</a>
-                                        </div>
-                                    </li>
-                                    <li class="current-page left round-icon">
-                                        <div class="round-icon-wrap"><a class="title-large round" href="#">2</a>
-                                        </div>
-                                    </li>
-                                    <li class="left round-icon">
-                                        <div class="round-icon-wrap"><a class="title-large round" href="#">3</a>
-                                        </div>
-                                    </li>
-                                    <li class="left round-icon">
-                                        <div class="round-icon-wrap"><a class="title-large round" href="#">4</a>
-                                        </div>
-                                    </li>
-                                    <li class="the-last-page left round-icon">
-                                        <div class="round-icon-wrap"><a class="title-large round"
-                                                                        href="#">...233</a></div>
-                                    </li>
-                                    <li class="next-page left round-icon">
-                                        <div class="round-icon-wrap"><a class="title-large round" href="#">&gt;</a>
-                                        </div>
-                                    </li>
-                                </ul>
+                                <div class="page">
+                                    <div class="page-wrap">
+                                        <ul class="clear medium title-large">
+                                            <li class="prev left round-icon">
+                                                <div class="round-icon-wrap"><a class="title-large round" href="#">
+                                                    &lt;</a></div>
+                                            </li>
+                                            <li class="the-first-page left round-icon">
+                                                <div class="round-icon-wrap"><a class="title-large round" href="#">1...</a>
+                                                </div>
+                                            </li>
+                                            <li class="current-page left round-icon">
+                                                <div class="round-icon-wrap"><a class="title-large round"
+                                                                                href="#">1</a></div>
+                                            </li>
+                                            <li class="left round-icon">
+                                                <div class="round-icon-wrap"><a class="title-large round"
+                                                                                href="#">2</a></div>
+                                            </li>
+                                            <li class="left round-icon">
+                                                <div class="round-icon-wrap"><a class="title-large round"
+                                                                                href="#">3</a></div>
+                                            </li>
+                                            <li class="the-last-page left round-icon">
+                                                <div class="round-icon-wrap"><a class="title-large round" href="#">...10</a>
+                                                </div>
+                                            </li>
+                                            <li class="next left round-icon">
+                                                <div class="round-icon-wrap"><a class="title-large round" href="#">
+                                                    &gt;</a></div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="hide comment-backdrop"></div>
                             </div>
                         </div>
                     </div>
