--- a/citi/templates/base.jinja
+++ b/citi/templates/base.jinja
@@ -158,25 +158,25 @@
                     <div class="footer-section left">
                         <h2 class="normal">关于</h2>
                         <ul>
-                            <li><a href="#">了解好味道众筹</a></li>
-                            <li><a href="#">好味道众筹历程</a></li>
-                            <li><a href="#">友情链接</a></li>
-                            <li><a href="#">联系我们</a></li>
+                            <li><a href="{{ url('page.contact') }}">了解好味道众筹</a></li>
+                            <li><a href="{{ url('page.contact') }}">好味道众筹历程</a></li>
+                            <li><a href="{{ url('page.contact') }}">友情链接</a></li>
+                            <li><a href="{{ url('page.contact') }}">联系我们</a></li>
                         </ul>
                     </div>
                     <div class="footer-section left">
                         <h2 class="normal">帮助</h2>
                         <ul>
-                            <li><a href="#">建议反馈</a></li>
-                            <li><a href="#">常见问题</a></li>
+                            <li><a href="{{ url('page.feedback') }}">建议反馈</a></li>
+                            <li><a href="{{ url('page.feedback') }}">常见问题</a></li>
                         </ul>
                     </div>
                     <div class="footer-section left">
                         <h2 class="normal">声明</h2>
                         <ul>
-                            <li><a href="#">用户协议</a></li>
-                            <li><a href="#">免责声明</a></li>
-                            <li><a href="#">隐私版权声明</a></li>
+                            <li><a href="{{ url('page.agreement') }}">用户协议</a></li>
+                            <li><a href="{{ url('page.disclaimer') }}">免责声明</a></li>
+                            <li><a href="{{ url('page.disclaimer') }}">隐私版权声明</a></li>
                         </ul>
                     </div>
                     <div class="footer-section left">
