--- a/citi/apps/page/templates/page/disclaimer.jinja
+++ b/citi/apps/page/templates/page/disclaimer.jinja
@@ -29,11 +29,21 @@
                 <div class="static-panel-wrap">
                     <div class="sign-panel-header">
                         <ul class="medium js-sign-header clear center">
-                            <li class="static-pannel-active sign-panel-title left"><h3><a href="http://citi.oott.me/static_page/agreement/" class="block white">用户协议</a></h3></li>
-                            <li class="sign-panel-title left"><h3><a href="http://citi.oott.me/static_page/disclaimer/" class="block white">免责声明</a></h3></li>
-                            <li class="static-pannel-active sign-panel-title left"><h3><a href="http://citi.oott.me/static_page/copyright/" class="block white">隐私版权声明</a></h3></li>
-                            <li class="static-pannel-active sign-panel-title left"><h3><a href="http://citi.oott.me/static_page/contact/" class="block white">联系我们</a></h3></li>
-                            <li class="static-pannel-active sign-panel-title left"><h3><a href="http://citi.oott.me/static_page/feedback/" class="block white">建议反馈</a></h3></li>
+                            <li class="sign-panel-title left"><h3><a
+                                    href="{{ url('page.agreement') }}" class="block white">用户协议</a>
+                            </h3></li>
+                            <li class="static-pannel-active sign-panel-title left"><h3><a
+                                    href="{{ url('page.disclaimer') }}" class="block white">免责声明</a>
+                            </h3></li>
+                            <li class="sign-panel-title left"><h3><a
+                                    href="{{ url('page.copyright') }}" class="block white">隐私版权声明</a>
+                            </h3></li>
+                            <li class="sign-panel-title left"><h3><a
+                                    href="{{ url('page.contact') }}" class="block white">联系我们</a>
+                            </h3></li>
+                            <li class="sign-panel-title left"><h3><a
+                                    href="{{ url('page.feedback') }}" class="block white">建议反馈</a>
+                            </h3></li>
                         </ul>
                     </div>
                     <div >
