--- a/citi/apps/page/templates/page/disclaimer.jinja
+++ b/citi/apps/page/templates/page/disclaimer.jinja
@@ -53,34 +53,34 @@
 
                                 </br><strong><h4>总则</h4></strong></br>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;用户在接受追梦网服务之前，请务必仔细阅读本条款并同意本声明。</p>
-                                　　<p>&nbsp;&nbsp;&nbsp;&nbsp;用户直接或通过各类方式（如站外API引用等）间接使用追梦网服务和数据的行为，都将被视作已无条件接受本声明所涉全部内容；若用户对本声明的任何条款有异议，请停止使用追梦网所提供的全部服务。</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;用户在接受好味道众筹网服务之前，请务必仔细阅读本条款并同意本声明。</p>
+                                　　<p>&nbsp;&nbsp;&nbsp;&nbsp;用户直接或通过各类方式（如站外API引用等）间接使用好味道众筹网服务和数据的行为，都将被视作已无条件接受本声明所涉全部内容；若用户对本声明的任何条款有异议，请停止使用好味道众筹网所提供的全部服务。</p>
 
                                 </br><strong><h4>第一条</h4></strong></br>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;用户以各种方式使用追梦网服务和数据（包括但不限于发表、宣传介绍、转载、浏览及利用追梦网或追梦网用户发布内容）的过程中，不得以任何方式利用追梦网直接或间接从事违反中国法律、以及社会公德的行为，且用户应当恪守下述承诺：</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;用户以各种方式使用好味道众筹网服务和数据（包括但不限于发表、宣传介绍、转载、浏览及利用好味道众筹网或好味道众筹网用户发布内容）的过程中，不得以任何方式利用好味道众筹网直接或间接从事违反中国法律、以及社会公德的行为，且用户应当恪守下述承诺：</p>
 
                                 <p>&nbsp;&nbsp;&nbsp;&nbsp;1. 发布、转载或提供的内容符合中国法律、社会公德；</p>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;2. 不得干扰、损害和侵犯追梦网的各种合法权利与利益；</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;2. 不得干扰、损害和侵犯好味道众筹网的各种合法权利与利益；</p>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;3. 遵守追梦网以及与之相关的网络服务的协议、指导原则、管理细则等；</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;3. 遵守好味道众筹网以及与之相关的网络服务的协议、指导原则、管理细则等；</p>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;追梦网有权对违反上述承诺的内容予以删除。</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;好味道众筹网有权对违反上述承诺的内容予以删除。</p>
 
                                 </br><strong><h4>第二条</h4></strong></br>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;1. 追梦网仅为用户发布的内容提供存储空间，追梦网不对用户发表、转载的内容提供任何形式的保证：不保证内容满足您的要求，不保证追梦网的服务不会中断。因网络状况、通讯线路、第三方网站或管理部门的要求等任何原因而导致您不能正常使用追梦，追梦网不承担任何法律责任。</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;1. 好味道众筹网仅为用户发布的内容提供存储空间，好味道众筹网不对用户发表、转载的内容提供任何形式的保证：不保证内容满足您的要求，不保证好味道众筹网的服务不会中断。因网络状况、通讯线路、第三方网站或管理部门的要求等任何原因而导致您不能正常使用追梦，好味道众筹网不承担任何法律责任。</p>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;2. 用户在追梦网发表的内容（包含但不限于追梦网目前各产品功能里的内容）仅表明其个人的立场和观点，并不代表追梦网的立场或观点。作为内容的发表者，需自行对所发表内容负责，因所发表内容引发的一切纠纷，由该内容的发表者承担全部法律及连带责任。追梦网不承担任何法律及连带责任。</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;2. 用户在好味道众筹网发表的内容（包含但不限于好味道众筹网目前各产品功能里的内容）仅表明其个人的立场和观点，并不代表好味道众筹网的立场或观点。作为内容的发表者，需自行对所发表内容负责，因所发表内容引发的一切纠纷，由该内容的发表者承担全部法律及连带责任。好味道众筹网不承担任何法律及连带责任。</p>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;3. 用户在追梦网发布侵犯他人知识产权或其他合法权益的内容，追梦网有权予以删除，并保留移交司法机关处理的权利。</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;3. 用户在好味道众筹网发布侵犯他人知识产权或其他合法权益的内容，好味道众筹网有权予以删除，并保留移交司法机关处理的权利。</p>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;4. 个人或单位如认为追梦网上存在侵犯自身合法权益的内容，应准备好具有法律效应的证明材料，及时与追梦网取得联系，以便追梦网迅速做出处理。</p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;4. 个人或单位如认为好味道众筹网上存在侵犯自身合法权益的内容，应准备好具有法律效应的证明材料，及时与好味道众筹网取得联系，以便好味道众筹网迅速做出处理。</p>
 
                                 </br><strong><h4>附则</h4></strong></br>
 
-                                <p>&nbsp;&nbsp;&nbsp;&nbsp;对免责声明的解释、修改及更新权均属于追梦网所有。 </p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;对免责声明的解释、修改及更新权均属于好味道众筹网所有。 </p>
                             </div>
                         </div>
                     </div>
