--- a/citi/apps/crowdfunding/templates/crowdfunding/project_detail.jinja
+++ b/citi/apps/crowdfunding/templates/crowdfunding/project_detail.jinja
@@ -86,7 +86,7 @@
                     <div class="inline-block info-like center">
                         <dl class="clear">
                             <dt class="left">关注</dt>
-                            <dd class="right">{{ object.attention_count }}人</dd>
+                            <dd class="right normal">{{ object.attention_count }}人</dd>
                         </dl>
                     </div>
                 </div>
